--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,24 @@
 /*  your css code here. If applicable */
+#a{
+	color:#2a7ae2;
+}
+/*  your css code here. If applicable */
+#b{
+	color:#f44336;
+}
+/*  your css code here. If applicable */
+#c{
+	color:#4caf50;
+}
+/*  your css code here. If applicable */
+#d{
+	color:#ff9800;
+}
+/*  your css code here. If applicable */
+#e{
+	color:#607d8b;
+}
+/*  your css code here. If applicable */
+#f{
+	color:#ffeb3b;
+}
